# bevy_dog

./: .gitignore  Cargo.toml  LICENSE.md  README.md  notes.md
assets/shaders/: aa.wgsl  bakcommon.wgsl.bak  bakgaussian.wgsl.bak  blend.wgsl  dog.wgsl  fdog.wgsl  rgb2lab.wgsl  tfm.wgsl  tfm.wgsl.bak
assets/textures/engraving-hand-drawn-pattern-collection/: 5459977.eps  5459978.ai
assets/textures/engraving-hand-drawn-pattern-collection (1)/: 5187859.ai  5187862.eps
assets/textures/engraving-hand-drawn-pattern-collection (2)/: 5251622.jpg-autosave.kra  5251677.ai
examples/: crosshatch_scene.rs  simple_scene.rs  slider_scene.rs  texture_binding_array.rs
examples/debug_ui/: lib.rs
src/: debug_ui.rs  main.rs  node.rs  notes.md  pipeline.rs  plugin.rs  settings.rs  textures.rs
src/gaussian/: mod.rs  node.rs  pipeline.rs  plugin.rs  settings.rs  textures.rs
